--- a/analisis_irradiancia.ipynb
+++ b/analisis_irradiancia.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 74,
    "id": "780bd919",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "id": "3b69b57a",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "id": "ac7de117",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "[214968 rows x 6 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "id": "ffa0f2b8",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "[113736 rows x 6 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "id": "f23a3f76",
    "metadata": {},
    "outputs": [],
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "id": "466d09e5",
    "metadata": {},
    "outputs": [
@@ -637,17 +637,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "id": "37450dd3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7c9b7d9fa850>"
+       "<seaborn.axisgrid.FacetGrid at 0x7c9b62747ed0>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "id": "d6a7f5a7",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "id": "46e1d3d2",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "id": "ece47cb5",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 84,
    "id": "a07560f6",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
        "[111312 rows x 6 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 85,
    "id": "b69c02db",
    "metadata": {},
    "outputs": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "id": "0230a001",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,17 +1009,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "id": "4accc1f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7c9b229bb750>"
+       "<seaborn.axisgrid.FacetGrid at 0x7c9b2c0811d0>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 88,
    "id": "e7dbec12",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 89,
    "id": "00386023",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1089,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 90,
    "id": "cce5f3d4",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1222,7 @@
        "max                           628.35             0.85  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "id": "f5f52377",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 92,
    "id": "f060bed8",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "b66f5e68",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1376,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_66804/3339555795.py:9: FutureWarning: \n",
+      "/tmp/ipykernel_66804/3649015554.py:9: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "84fc7b25",
    "metadata": {},
    "outputs": [
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 95,
    "id": "d2fd3a74",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 96,
    "id": "7260fd58",
    "metadata": {},
    "outputs": [
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 97,
    "id": "3c112e52",
    "metadata": {},
    "outputs": [
@@ -1594,7 +1594,7 @@
        "<Axes: xlabel='Irradiancia_Global_Horizontal'>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 98,
    "id": "63eb9da8",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 99,
    "id": "84d490ef",
    "metadata": {},
    "outputs": [
@@ -1745,7 +1745,6 @@
     "if 'FECHA_HORA_LOCAL' in df_analisis_2.columns:\n",
     "    df_analisis_2 = df_analisis_2.set_index('FECHA_HORA_LOCAL')\n",
     "\n",
-    "# Confirmar que el índice es un DatetimeIndex\n",
     "if not isinstance(df_analisis_2.index, pd.DatetimeIndex):\n",
     "    df_analisis_2.index = pd.to_datetime(df_analisis_2.index)\n",
     "\n",
@@ -1754,22 +1753,19 @@
     "print(\"\\nInformación del DataFrame df_analisis_2 después de la preparación:\")\n",
     "df_analisis_2.info()\n",
     "\n",
-    "# Verificando la cantidad de filas en el primer segmento (2001-2008)\n",
     "num_filas_1 = len(df_analisis_2.loc['2001-01-01':'2008-12-31'])\n",
     "print(f\"Número de filas en el segmento 2001-2008: {num_filas_1}\")\n",
     "\n",
-    "# Verificando la cantidad de filas en el segundo segmento (2009-2016)\n",
     "num_filas_2 = len(df_analisis_2.loc['2009-01-01':'2016-12-31'])\n",
     "print(f\"Número de filas en el segmento 2009-2016: {num_filas_2}\")\n",
     "\n",
-    "# Verificando la cantidad de filas en el tercer segmento (2017-2025)\n",
     "num_filas_3 = len(df_analisis_2.loc['2017-01-01':'2025-03-31'])\n",
     "print(f\"Número de filas en el segmento 2017-2025: {num_filas_3}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 100,
    "id": "b58be399",
    "metadata": {},
    "outputs": [
@@ -1851,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 101,
    "id": "037d7800",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 102,
    "id": "c190867d",
    "metadata": {},
    "outputs": [
@@ -1923,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 103,
    "id": "11aa5174",
    "metadata": {},
    "outputs": [
@@ -1966,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 104,
    "id": "bc637c0b",
    "metadata": {},
    "outputs": [
@@ -2016,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 105,
    "id": "88f94a8f",
    "metadata": {},
    "outputs": [
@@ -2060,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 106,
    "id": "2ebbe33f",
    "metadata": {},
    "outputs": [
@@ -2126,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 107,
    "id": "54cf4f11",
    "metadata": {},
    "outputs": [
@@ -2185,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 108,
    "id": "477e42c8",
    "metadata": {},
    "outputs": [
@@ -2228,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 109,
    "id": "37f69ae3",
    "metadata": {},
    "outputs": [
@@ -2259,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 110,
    "id": "daf6782b",
    "metadata": {},
    "outputs": [
@@ -2290,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 111,
    "id": "c7667162",
    "metadata": {},
    "outputs": [
